--- a/2강/index.html
+++ b/2강/index.html
@@ -5,17 +5,17 @@
 <title>title</title>
 </head>
 <body>
-<h1>nufyn 회사 설문조사</h1>
+<h1>학교 설문조사</h1>
 <form>
-이름: <input type="text" name="member" placeholder="이름을 반드시 입력해주세요" required><br><br>
-주소: <input type="text" name="addr" value="대구 달서구..." readonly><br><br>
-회사: <input type="text" name="company" value="nufyn 회사" disabled><br><br>
+이름: <input type="text" name="member" placeholder="이름을 입력해주세요" required><br><br>
+주소: <input type="text" name="addr" value="여의도" readonly><br><br>
+학교: <input type="text" name="company" value="회사" disabled><br><br>
 성별: <input type="radio" name="gender" value="man">남 <input type="radio" name="gender" value="woman">여<br><br>
 전화번호 앞자리: <input type="radio" name="number" value="other">기타 <input type="radio" name="number" value="original">010<br><br>
-좋아하는 애완 동물은? <input type="checkBox" name="dog" value="dog">개
-                    <input type="checkBox" name="cat" value="cat">고양이
-                    <input type="checkBox" name="snake" value="snake">뱀
-                    <input type="checkBox" name="ant" value="ant">개미 <br><br>
+좋아하는 과목은? <input type="checkBox" name="korean" value="dog">국어
+                    <input type="checkBox" name="math" value="cat">수학
+                    <input type="checkBox" name="english" value="snake">영어
+                    <input type="checkBox" name="coding" value="ant">코딩 <br><br>
 ID: &nbsp;<input type="text" name="id" placeholder="아이디"><br><br>
 PW: <input type="passWord"  name="pw" placeholder="패스워드"><br><br>
 
