--- a/index.html
+++ b/index.html
@@ -1,4 +1,4 @@
 <h1>Hello Web</h1>
 
-<a href="/study.html">study</a>
-<a href="/2/index.html">2강</a>
+<a href="study.html">study</a>
+<a href="2/index.html">2강</a>
