--- a/index.html
+++ b/index.html
@@ -3,3 +3,5 @@
 <a href="study.html">study</a>
 <a href="2/index.html">2강</a>
 <a href="todo/index.html">todo</a>
+
+<a href="share/word_style.css">word_style.css</a>
