--- a/index.html
+++ b/index.html
@@ -5,3 +5,5 @@
 <a href="todo/index.html">todo</a>
 <br>
 <a href="share/word_style.css">word_style.css</a>
+<br>
+<a href="share/library_style.css">library_style.css</a>
