--- a/index.html
+++ b/index.html
@@ -7,3 +7,7 @@
 <a href="share/word_style.css">word_style.css</a>
 <br>
 <a href="share/library_style.css">library_style.css</a>
+<br>
+<a href="share/quiz_style.css">quiz_style.css</a>
+
+
